--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,78 @@
-nltk
-numpy
-tensorflow
-flask
-gunicorn==20.1.0
+absl-py==2.0.0
+astunparse==1.6.3
+attrs==23.1.0
+boto3==1.28.26
+botocore==1.31.26
+cachetools==5.3.1
+certifi==2021.10.8
+cffi==1.15.1
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.4
+cryptography==41.0.3
+dnspython==2.2.1
+et-xmlfile==1.1.0
+Flask==2.2.2
+Flask-Cors==4.0.0
+flatbuffers==23.5.26
+funcs==0.8.0
+gast==0.5.4
+google-auth==2.23.2
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.59.0
+h5py==3.9.0
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.1.0
+keras==2.14.0
+libclang==16.0.6
+Markdown==3.4.4
+MarkupSafe==2.1.1
+ml-dtypes==0.2.0
+mysql-connector-python==8.0.31
+named==1.3.0
+nltk==3.7
+nodeenv==1.7.0
+numpy==1.26.0
+oauthlib==3.2.2
+openpyxl==3.1.2
+opt-einsum==3.3.0
+packaging==23.2
+pandas==2.1.1
+Pillow==9.1.0
+protobuf==4.24.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+PyJWT==2.8.0
+pymongo==4.3.3
+python-dateutil==2.8.2
+pytz==2023.3.post1
+regex==2022.4.24
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.9
+s3transfer==0.6.1
+six==1.16.0
+solus==1.1.0
+tensorboard==2.14.1
+tensorboard-data-server==0.7.1
+tensorflow==2.14.0
+tensorflow-estimator==2.14.0
+tensorflow-intel==2.14.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+torch==1.11.0+cu113
+torchaudio==0.11.0+cu113
+torchvision==0.12.0+cu113
+tqdm==4.64.0
+typing-aliases==1.1.3
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==1.26.9
+Werkzeug==2.2.2
+wraps==0.6.1
+wrapt==1.14.1
